2017-06-21  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Back port from mainline
	2017-05-19  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/80718
	* gcc.target/powerpc/pr80718.c: New test.

	Back port from mainline
	2017-05-18  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/80510
	* gcc.target/powerpc/pr80510-1.c: New test.
	* gcc.target/powerpc/pr80510-2.c: Likewise.

	Back port from mainline
	2017-05-09  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/68163
	* gcc.target/powerpc/pr68163.c: New test.

2017-06-19  James Greenhalgh  <james.greenhalgh@arm.com>

	Backport from mainline
	2017-06-16  James Greenhalgh  <james.greenhalgh@arm.com>

	PR target/71778
	* gcc.target/arm/pr71778.c: New.

2017-06-09  Janus Weil  <janus@gcc.gnu.org>

	Backport from trunk
	PR fortran/70601
	* gfortran.dg/proc_ptr_comp_50.f90: New test.

2017-06-08  Jakub Jelinek  <jakub@redhat.com>

	PR c/81006
	* c-c++-common/gomp/pr81006.c: New test.

	PR c++/81011
	* g++.dg/gomp/pr81011.C: New test.

2017-06-06  David S. Miller  <davem@davemloft.net>

	* gcc.target/sparc/sparc-ret-3.c: New test.

2017-06-06  Toma Tabacu  <toma.tabacu@imgtec.com>

	Backported from mainline
	2017-03-09  Toma Tabacu  <toma.tabacu@imgtec.com>

	* g++.dg/lto/pr69589_0.C: Add dg-require-effective-target for
	rdynamic.
	* lib/target-supports.exp (check_effective_target_rdynamic):
	New proc.

2017-05-03  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/65542
	Backport from trunk
	* gfortran.dg/spread_init_expr_2.f90:  New test case.

2017-06-02  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/80904
	Backport from trunk
	* gfortran.dg/matmul_bounds_12.f90:  New test.

2017-05-26  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-04-24  Martin Liska  <mliska@suse.cz>

	PR middle-end/79931
	* g++.dg/ipa/pr79931.C: New test.

2017-05-26  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-04-11  Martin Liska  <mliska@suse.cz>

	PR ipa/80212